# vigir_templates

./: README
vigir_template_library/: .gitignore  CMakeLists.txt  ghost_poses.csv  grasp_ids.txt  grasp_library.grasp  grasp_library_hook.grasp  grasp_library_irobot.grasp  grasp_library_robotiq.grasp  grasp_templates.txt  hand_poses.csv  package.xml  sandia_left_hand.urdf  sandia_right_hand.urdf  template_library.yaml
vigir_template_library/config/: hand_parameters.yaml
vigir_template_library/debris/: 2x4x36.mesh  2x4x36.mesh.xml  2x4x36.ply  cinder_pattern.ply
vigir_template_library/door/: door.mesh  doorhandle.mesh  doorhandle_mm.ply
vigir_template_library/grasp_library/: hector_gripper_grasp_library.xml  l_irobot_with_extension_grasp_library.xml  l_vt_hand_grasp_library.xml  manipulator_types.yaml  r_robotiq_grasp_library.xml  r_vt_hand_grasp_library.xml
vigir_template_library/grasp_templates/: l_irobot_grasp_library.csv  l_irobot_with_extension_grasp_library.csv  l_robotiq_grasp_library.csv  l_robotiq_grasp_library.xml  l_sandia_grasp_library.csv  l_sandia_grasp_library.xml  l_vt_hand_grasp_library.xml  r_hook_grasp_library.csv  r_irobot_grasp_library.csv  r_irobot_grasp_library.xml  r_irobot_with_extension_grasp_library.csv  r_payload_grasp_library.xml  r_robotiq_grasp_library.csv  r_robotiq_grasp_library.xml  r_sandia_grasp_library.csv  r_sandia_grasp_library.xml  r_vt_hand_grasp_library.xml
vigir_template_library/hose/: coupling_hexagon.mesh  coupling_hexagon.ply  coupling_hexagon_point_cloud.ply  nozzle.mesh.xml  nozzle_mm.ply
vigir_template_library/launch/: sim_vigir_onboard_template_server.launch  vigir_ocs_template_server.launch  vigir_onboard_template_server.launch  vigir_template_parameters.launch
vigir_template_library/object_library/: object_templates.xml
vigir_template_library/object_library/debris/: 2x4x36.mesh  2x4x36.mesh.xml  2x4x36.ply  argo_obstacle.mesh  argo_obstacle.mesh.xml  argo_obstacle.pcd  argo_obstacle.ply  argos_stair.mesh  argos_stair.mesh.xml  argos_stair.pcd  argos_stair.ply  cinder.mesh.xml  cinder.ply  cinder_pattern.mesh  cutting_wall.mesh.xml  cylinder.mesh  cylinder.mesh.xml  five_pipes.mesh  five_pipes.mesh.xml  five_pipes.ply  pipe.ply  steps.mesh.xml  steps.ply
vigir_template_library/object_library/door/: door.mesh.xml  doorhandle_left.mesh.xml  doorhandle_right.ply
vigir_template_library/object_library/hose/: nozzle.ply
vigir_template_library/object_library/kitchen/: cup.mesh  cup.mesh.xml  cup.pcd  cup.ply
vigir_template_library/object_library/tools/: DRC_drill.pcd  argo_manometer.mesh  argo_manometer.mesh.xml  argo_manometer.pcd  argo_manometer.ply  bit.ply  board_marker.mesh.xml  cutting_tool.mesh  cutting_tool.mesh.xml  cutting_tool.ply  demo_handel.mesh.xml  demo_handle.mesh  demo_handle.ply  demo_switch.mesh  demo_switch.mesh.xml  demo_switch.ply  drill_rough.mesh  drill_rough.mesh.xml  drill_rough.pcd  drill_rough.ply  hammer.mesh  ladder.mesh  mini_broom.ply  paint_roller.ply  rope.ply  switch.mesh  switch.mesh.xml  switch.ply
vigir_template_library/object_library/valve/: DRC_valve.mesh  QUAL_valve_point_cloud.ply  argo_valve.mesh  argo_valve.mesh.xml  argo_valve.pcd  argo_valve.ply  demo_small_valve.mesh  demo_small_valve.mesh.xml  demo_small_valve.ply  demo_valve.mesh  demo_valve.ply
vigir_template_library/object_library/vehicle/: polaris_drc.mesh  polaris_drc.mesh.xml  polaris_ranger_ev_complete.stl  steering_wheel.grasp  steering_wheel.pcd
vigir_template_library/object_templates/: object_templates.csv  object_templates.xml
vigir_template_library/object_templates/debris/: 2x4x36_mm.ply  4x4x24.mesh  4x4x24.mesh.xml  4x4x24.ply  4x4x24_mm.ply  broom_stick.mesh  broom_stick.mesh.xml  broom_stick.ply  cinder.mesh  cinder_pattern.mesh.xml  cutting_wall.mesh  cutting_wall.ply  cylinder.ply  steps.mesh
vigir_template_library/object_templates/door/: door.mesh  door.mesh.xml  door.ply  doorhandle.ply  doorhandle_right.mesh  doorhandle_right.mesh.xml  doorlever.mesh  doorlever.mesh.xml  doorlever.ply
vigir_template_library/object_templates/hose/: cable_socket.mesh  cable_socket.mesh.xml  cable_socket.ply  cordplug.mesh  cordplug.mesh.xml  cordplug.ply  coupling_hexagon.pcd  coupling_hexagon_mm.ply  fire_hose.mesh  fire_hose.mesh.xml  fire_hose.ply  nozzle.grasp  nozzle.mesh  wye.mesh  wye.mesh.xml  wye.ply
vigir_template_library/object_templates/standpipe/: standpipe.mesh.xml  standpipe.pcd  standpipe.ply  standpipe_point_cloud.ply
vigir_template_library/object_templates/tools/: Cube.mesh  Cube.mesh.xml  DRC_Wall_task.mesh.xml  DRC_Wall_task.ply  DRC_drill.mesh  DRC_drill.mesh.xml  DRC_drill.ply  DRC_drill_mm.ply  board_marker.mesh  board_marker.ply  button_box.mesh  button_box.mesh.xml  button_box.ply  cordless_drill.mesh  (+28 more)
vigir_template_library/robot_library/: atlas_v5_stand_poses.xml  hector_tracker_stand_poses.xml  thormang3_stand_poses.xml
vigir_template_library/robot_poses/: atlas_v3_stand_poses.csv  atlas_v5_stand_poses.xml  thor_mang_hands_stand_poses.xml  thor_mang_stand_poses.xml
vigir_template_library/src/: graspit_mm_to_m.py  right_to_left.py
vigir_template_library/standpipe/: standpipe.mesh  standpipe_mm.ply
vigir_template_library/tools/: DRC_Wall_task.mesh  DRC_drill.mesh.xml  DRC_drill.ply  cordless_drill.mesh.xml  cordless_drill_handle_mirror_mm_template.grasp  cordless_drill_mm.ply  ladder.stl
vigir_template_library/valve/: QUAL_valve.ply  QUAL_valve_holes.mesh.xml  QUAL_valve_holes.ply  bar.ply  blender2ogre-export.scene  corss.ply  valve.mesh.xml  valve.ply.bkp  valve_holes.ply  valve_mm.ply  valve_point_cloud.ply
vigir_template_library/vehicle/: brake_pedal.ply  brake_pedal_mm.mesh.xml  brake_pedal_mm.scene  brake_pedal_point_cloud.ply  parking.ply  polaris.mesh  polaris.ply  roll_bar_corner_mm.mesh.xml  roll_bar_single_mm.scene  roll_bar_tube_alignz_mm.mesh  roll_bar_tube_alignz_mm.scene  roll_bar_tube_mm.mesh  steering_wheel.mesh.xml  steering_wheel.ply  throttle.pcd  throttle.ply  throttle_mm.mesh  throttle_mm.mesh.xml  throttle_mm.ply  throttle_point_cloud.ply
(+48 files in other folders)
