<?xml version="1.0"?>
<package>
  <name>vigir_template_library</name>
  <version>0.0.0</version>
  <description>The vigir_template_library package</description>

  <maintainer email="romay@sim.tu-darmstadt.de">Alberto Romay</maintainer>
  <author email="romay@sim.tu-darmstadt.de">Alberto Romay</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
